Fix .modal-dialog margins creating wierd overlaps

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -158,4 +158,7 @@ h1
   
   .profile-name
     padding-top: 18px
+   
+  .modal-dialog
+    margin: 0 0 0 0
   
